umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_cdk_chemblMolregno7039.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 39
bond_count: 41
sum_formula: C28HN4O6
graph6: "fC`@?_CO_@G?G?A??C?O??O??H@????OA????O???@?????C??????G_?????_?????_G??A?_???G????O????G?????C?????C_????C?????O?????@_???G??"
