umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_cdk_polycarpol.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 32
bond_count: 35
sum_formula: C30O2
graph6: _hEG_C@AG@?@?@?C_@??@?@C_?@??A???G???A???G???C???A?????_???O???@????C????G????G????G
