umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_cdk_reserpine.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 44
bond_count: 49
sum_formula: C33N2O9
graph6: khEG_CH?O?_@?H?C??G?@?AC??_??G??C??P???O???_??@???@????_???G???@???@D???????C????G??????@?????G????G???@??????C???????_???C???????@????O????????G????C??????A??
