umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_cdk_sdg_test.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 29
bond_count: 31
sum_formula: C20BrN2O4S2
graph6: "\\pSS???O?D?G?GG???_G???g@??@????_@?????O???_?_????@??????A?G??OC???CO"
